(Breaking changes) ClientStateHandler manages an extensible list of individual event handlers; AbstractPage takes as type parameter the data displayed on the page; Websocket payloads now carry the type name explicitly (if there's more than one type); AbstractComponent: remove unused 'End' enum; AbstractPage's onLoad function is constructed and invoked automatically if a PageMember needs it. HTML Element: add getters and with-methods